--- a/FrontEndApp/package.json
+++ b/FrontEndApp/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
+    "@reduxjs/toolkit": "^2.9.0",
+    "axios": "^1.12.2",
     "expo": "~54.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "^29.0.11",
@@ -18,7 +21,8 @@
     "react-native": "0.81.4",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-redux": "^9.2.0"
   },
   "private": true
 }
