--- a/FrontEndApp/package.json
+++ b/FrontEndApp/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "expo": "~54.0.10",
+    "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "^29.0.11",
     "react": "19.1.0",
