--- a/FrontEndApp/package.json
+++ b/FrontEndApp/package.json
@@ -15,11 +15,13 @@
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "expo": "~54.0.10",
+    "expo-linear-gradient": "~15.0.7",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "^29.0.11",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
