--- a/FrontEndApp/package.json
+++ b/FrontEndApp/package.json
@@ -27,5 +27,8 @@
     "react-native-screens": "~4.16.0",
     "react-redux": "^9.2.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-preset-expo": "^54.0.3"
+  }
 }
