feat: Implementación de Firebase con CRUD de favoritos

--- a/FrontEndApp/.env.example
+++ b/FrontEndApp/.env.example
@@ -6,13 +6,22 @@ OPENWEATHER_API_KEY=tu_api_key_aqui
 OPENWEATHER_BASE_URL=https://api.openweathermap.org/data/2.5
 OPENWEATHER_DEFAULT_CITY=Tehuacán
 
+# Firebase Configuration - Obtén las credenciales en https://console.firebase.google.com/
+FIREBASE_API_KEY=your_firebase_api_key_here
+FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
+FIREBASE_PROJECT_ID=your-project-id
+FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+FIREBASE_APP_ID=your_app_id
+
 # Configuración general
 APP_ENV=development
 API_TIMEOUT=15000
 
 # Instrucciones:
-# 1. Ve a https://openweathermap.org/api
-# 2. Crea una cuenta gratuita
-# 3. Obtén tu API Key desde tu dashboard
-# 4. Reemplaza 'tu_api_key_aqui' con tu API Key real
-# 5. La API Key puede tardar hasta 2 horas en activarse
+# 1. OpenWeather: Ve a https://openweathermap.org/api y obtén tu API Key
+# 2. Firebase: Ve a https://console.firebase.google.com/ y crea un proyecto
+#    - Ve a Project Settings > General > Your apps
+#    - Agrega una app web y copia las credenciales
+# 3. Reemplaza todos los valores 'your_xxx_here' con tus credenciales reales
+# 4. Nunca subas este archivo .env a git (está en .gitignore)
