--- a/FrontEndApp/package.json
+++ b/FrontEndApp/package.json
@@ -19,6 +19,7 @@
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "^29.0.11",
+    "firebase": "^10.7.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-dotenv": "^3.4.11",
