--- a/FrontEndApp/package.json
+++ b/FrontEndApp/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -22,7 +23,6 @@
     "firebase": "^10.7.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -30,6 +30,22 @@
   },
   "private": true,
   "devDependencies": {
-    "babel-preset-expo": "^54.0.3"
+    "axios-mock-adapter": "^2.1.0",
+    "babel-preset-expo": "^54.0.3",
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.12",
+    "react-native-dotenv": "^3.4.11"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|react-native-dotenv|firebase)"
+    ],
+    "moduleNameMapper": {
+      "^@env$": "react-native-dotenv"
+    }
   }
 }
