--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,14 +15,10 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '16.x'
+        node-version: '18.x'
         
     - name: Install frontend dependencies
       run: npm install
-      working-directory: ./FrontEndApp
-      
-    - name: Build frontend
-      run: npm run build --if-present
       working-directory: ./FrontEndApp
       
   build-backend:
@@ -33,11 +29,11 @@ jobs:
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.1'
-        extensions: mbstring, xml, ctype, iconv, intl, pdo_sqlite
+        php-version: '8.2'
+        extensions: mbstring, xml, ctype, iconv, intl, pdo_sqlite, tokenizer, fileinfo
         
     - name: Install backend dependencies
-      run: composer install --prefer-dist --no-progress
+      run: composer install --prefer-dist --no-progress --no-dev
       working-directory: ./BackEndApp
       
     - name: Copy environment file
@@ -57,14 +53,14 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '16.x'
+        node-version: '18.x'
         
     - name: Install frontend dependencies
       run: npm install
       working-directory: ./FrontEndApp
       
     - name: Run frontend tests
-      run: npm test --if-present
+      run: npm test -- --watchAll=false
       working-directory: ./FrontEndApp
       
   test-backend:
@@ -76,8 +72,8 @@ jobs:
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.1'
-        extensions: mbstring, xml, ctype, iconv, intl, pdo_sqlite
+        php-version: '8.2'
+        extensions: mbstring, xml, ctype, iconv, intl, pdo_sqlite, tokenizer, fileinfo
         
     - name: Install backend dependencies
       run: composer install --prefer-dist --no-progress
@@ -91,12 +87,16 @@ jobs:
       run: php artisan key:generate
       working-directory: ./BackEndApp
       
+    - name: Create database
+      run: touch database/database.sqlite
+      working-directory: ./BackEndApp
+      
     - name: Run database migrations
       run: php artisan migrate --force
       working-directory: ./BackEndApp
       
     - name: Run backend tests
-      run: php artisan test
+      run: php artisan test --without-tty
       working-directory: ./BackEndApp
       
   deploy-staging:
