fix(tests): Mejorar configuración de tests para compatibilidad con CI/CD

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -60,7 +60,7 @@ jobs:
       working-directory: ./FrontEndApp
       
     - name: Run frontend tests
-      run: npm test -- --watchAll=false
+      run: npm test -- --watchAll=false --testPathIgnorePatterns="src/utils/test/"
       working-directory: ./FrontEndApp
       
   test-backend:
