--- a/BackEndApp/.gitignore
+++ b/BackEndApp/.gitignore
@@ -22,3 +22,8 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
+
+# Firebase Credentials - NEVER COMMIT THESE!
+/storage/app/firebase-credentials.json
+composer.phar
+composer-setup.php
