--- a/FrontEndApp/package.json
+++ b/FrontEndApp/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
+    "babel-preset-expo": "^54.0.4",
     "expo": "~54.0.10",
+    "expo-clipboard": "~8.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
