--- a/FrontEndApp/package.json
+++ b/FrontEndApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "@reduxjs/toolkit": "^2.9.0",
@@ -26,9 +27,11 @@
     "firebase": "^10.7.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-aes-crypto": "^3.2.1",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-ssl-pinning": "^1.6.0",
     "react-redux": "^9.2.0"
   },
   "private": true,
