--- a/FrontEndApp/package.json
+++ b/FrontEndApp/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest"
   },
@@ -36,6 +36,7 @@
   },
   "private": true,
   "devDependencies": {
+    "@react-native-community/cli": "^20.0.2",
     "axios-mock-adapter": "^2.1.0",
     "babel-preset-expo": "^54.0.3",
     "jest": "^30.2.0",
